force-app/main/default/objects/Faculty__c/fields/Subjects_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Subjects_Assigned__c</fullName>
    <description>Subjects allocated to faculty</description>
    <label>Subjects Assigned</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usability Design of Software Application</fullName>
            </value>
            <value>
                <fullName>Financial Management</fullName>
            </value>
            <value>
                <fullName>Introduction to IoT</fullName>
            </value>
            <value>
                <fullName>Advance Social, Text &amp; Media Analytics</fullName>
            </value>
            <value>
                <fullName>IT W/S (MATLAB)</fullName>
            </value>
            <value>
                <fullName>Major Project - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>