force-app/main/default/objects/Faculty__c/validationRules/Faculty_Email_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Faculty_Email_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Email__c, &quot;^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,4}$&quot;))</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Enter a valid faculty email address.</errorMessage>
</ValidationRule>