force-app/main/default/objects/Faculty__c/validationRules/Faculty_Phone_Valid.validationRule-meta.xml
<ValidationRule>
    <fullName>Faculty_Phone_Valid</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX( Phone_Number__c , &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Phone number must contain exactly 10 digits.</errorMessage>
</ValidationRule>