force-app/main/default/objects/Faculty__c/validationRules/Faculty_Status_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Faculty_Status_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Status__c))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Please select faculty status (Active, On Leave).</errorMessage>
</ValidationRule>