force-app/main/default/objects/Faculty__c/listViews/Faculty_View.listView-meta.xml
<ListView>
    <fullName>Faculty_View</fullName>
    <columns>NAME</columns>
    <columns>Designation__c</columns>
    <columns>Subjects_Assigned__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Mine</filterScope>
    <label>Faculty View</label>
</ListView>